src/dts/tests/modules/modules.exp

modules.js:6:18,18: number
This type is incompatible with
modules.js:6:9,14: string

modules.js:8:19,30: call of method `get_y`
Error:
modules.js:8:19,30: number
This type is incompatible with
modules.js:8:10,15: string

Found 2 errors
